portfolio/src/main/webapp/style.css
* {
  margin: 0px;
  padding: 0px;
}

/*
Purpose of this line it allows the background to extend throughout the whole page
When only applied this padding rule to the body there was still an issue with
the margin around the top by default.
*/

textarea {
  text-align: center;
}

textarea:focus {
  outline: none;
  text-align: center;
}

/*Remove the default highlight around a textarea when selected in Chrome.*/

#content {
  width: 100%;
  height: 100vh;
  background-image: url("images/websiteBackground.png");
}

#greeting-container {
  margin-top: 20px;
}

#mid-tile {
  position: relative;
  text-align: center;
  left: 7.5%;
  width: 85%;
  height: 95vh;
  background-color: rgba(0, 128, 128, .6);
}

#icons {
  padding-top: .5%;
}

#headshot {
  width: 100%;
  height: 100%;
}

#prior-comments {
  width: 80%;
  height: 20%;
  background-color: rgba(0, 128, 128, .8);
  margin-left: 10%;
  margin-top: 1%;
  border: .1px lightgray;
  overflow: auto;
}

.front-tile-logo {
  width: 40%;
  height: 40%;
}

/*We should find some generalizable way to autofit text in this box.*/

.tile {
  /*Style was changed to have .33% at end so elements are perfectly centered
  with that value of padding.*/
  float: left;
  width: 31.33%;
  height: 31.33%;
  padding: 1%;
  vertical-align: middle;
  background-clip: content-box;
  /*This handy line makes sure that padding is not also colored by the
  background color.*/
  background-color: rgba(255, 255, 0, .65);
}

.portrait-tile-back {
  overflow: auto;
  width: 100%;
  height: 100%
}

.tile-back img, .tile-front img, .portrait-tile-back img {
  width: 100%;
  height: 100%;
  /*Uncomment line if don't want to distort image resolution.*/
  /*object-fit:cover;*/
}

.title {
  font-size: 4em;
  font-family: fantasty;
}

#hammer-tile-logo {
  width: 64%;
  height: 40%;
  padding-top: 4%;
  height: 79%;
}

#juggling-tile-logo {
  width: 90%;
  height: 73%;
  padding-top: 4%;
}

/*This styles the iframe body for including the large background content.*/

html:not(root) body {
  overflow-x: hidden;
  overflow-y: auto;
  width: 100%;
  height: 100%;
}

ul {
  list-style: none;
}

.portrait-tile {
  width: 13vw;
  height: 15vw;
  margin-left: 36vw;
}

.portrait-tile-front img {
  width: 100%;
  height: 100%;
}

.portrait-tile-back div {
  overflow: auto;
  width: 100%;
  height: 100%
}

.tile-inner, .portrait-tile-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.tile-inner {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.portrait-tile-inner {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.tile:hover .tile-inner {
  transform: rotateX(180deg);
}

.portrait-tile:hover .portrait-tile-inner {
  transform: rotateY(180deg);
}

.tile-front, .tile-back, .portrait-tile-back, .portrait-tile-front {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  font-size: .8vw;
}

.tile-front {
  /*This is left empty in anticipation of further styling.*/
}

.tile-back {
  transform: rotateX(180deg);
}

.portrait-tile-front {
  background-color: transparent;
}

.portrait-tile-back {
  background-color: lightskyblue;
  transform: rotateY(180deg);
}

.portrait-tile p {
  padding-top: 8%;
  padding-bottom: 8%;
  font-size: 1.8em;
}

.title {
  font-size: 1.8vw;
}

.sub-title {
  font-size: 1.75vw;
}

.sub-title ul {
  font-size: 1.4vw;
}

.sub-script {
  font-size: .8vw;
}

::-webkit-scrollbar {
  display: none;
  background: transparent;
}

li {
  font-size: 1.3vw;
}

.comment-body {
  height: auto;
  font-size: 1vw;
}

.comment-body-form {
  font-size: .5vw;
  height: 2.5vh;
}

.user {
  vertical-align: top;
  font-size: .7vw;
  height: 1.25vh;
  display: block;
}

#comment-submit {
  vertical-align: top;
  border: none;
  background-color: greenyellow;
  height: 1.25vh;
  display: block;
}

#submit-panel {
  width: auto;
  height: 2.5vh;
  display: inline-block;
  vertical-align: top;
}

#full-comment {
  margin-top: .4%;
}

.btn {
  padding: 3px;
}

.btn:hover {
  background-color: gray;
}

.input-panel {
  text-align: right;
}

#add-comment {
  visibility: hidden;
}

#select-num-results {
  width: 54px;
  height: 22px;
  vertical-align: top;
}

#file-upload {
  display: inline-block;
  vertical-align: top;
}

.comment-full img {
  width: 10%;
  height: auto;
}

.user-panel {
  float: right;
  padding-right: 3px;
  display: none;
}

.input-panel {
  float: right;
  display: none;
}

#nav-bar {
  display: block;
}

.comment-img {
  display: block;
  margin-left: 45%;
}

